# InstantAI-Data-Workflow

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  __init__.py  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
app/: cli.py  workflows.py
app/commands/: __init__.py  audit.py  benchmark.py  doctor.py  merge.py  test.py  validate.py
configs/corpus/: evaluation.yaml
configs/filtering/: document_gate.yaml  quality_english_150m.yaml  quality_fast_first.yaml  quality_foundation_en.yaml  quality_smoke_5mb.yaml
configs/language/: identification.yaml
configs/licensing/: default.yaml  sources.yaml
configs/observability/: default.yaml
configs/pipeline/: default.yaml
configs/refining/: default.yaml
configs/safety/: pii.yaml  toxicity.yaml
configs/sources/: domain_map.yaml  mix_100gb_hf.yaml  mix_10gb_foundation_en.yaml  mix_10gb_hf.yaml  mix_5mb_hf.yaml  mix_top7_en_5mb_hf.yaml
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
docs/: README.md  package.json
docs/architecture/: dedup.md  execution.md  overview.md  scheduler.md
docs/data-workflow/: overview.mdx  package.json  sidebar.json
docs/data-workflow/architecture/: execution-graph.mdx  overview.mdx  scheduler.mdx  stage0.mdx  storage.mdx
docs/data-workflow/cli/: commands.mdx  workflows.mdx
docs/data-workflow/configuration/: datasets.mdx  environments.mdx  outputs.mdx  pipeline.mdx
docs/data-workflow/developer/: contributing.mdx  custom-stages.mdx  extensions.mdx  testing.mdx
docs/data-workflow/getting-started/: configuration.mdx  first-pipeline.mdx  installation.mdx  overview.mdx  quickstart.mdx
docs/data-workflow/guides/: cleaning.mdx  (+1 more)
docs/developer/: backends.md  contributing.md  testing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/reference/: api.md  commands.md  configuration.md
docs/user-guide/: cli.md  pipeline.md  workflows.md
examples/: merge_custom_config.py  merge_custom_output.py  merge_dask.py  merge_local.py
scripts/: admission_cost_audit.py  dask_integration_report.py  dev.ps1  dev.sh  export_doc_images.py  library_migration_report.py  pipeline_audit.py  stage0_production_verify.py
src/indw/: __init__.py  _compat.py
tests/: conftest.py
tests/fixtures/: cleaning_golden.jsonl  pipeline_corpus.py
tests/subsystems/: test_execution_backend.py  test_library_first_architecture.py  test_merge.py  test_parallel_merge_parity.py  test_pipeline_audit.py  test_stage_pool_parity.py  test_tier_admission_parity.py
(+421 files in other folders)
